# example-Haskell-NSSpeechRecognizer

./: .gitignore  README.md  example-Haskell-NSSpeechRecognizer.cabal  stack.yaml
data/: YourVoiceCommands.hs
executables/: Main.hs
sources/NSSpeechRecognizer/: You.hs
