name:                example-Haskell-NSSpeechRecognizer
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/example-Haskell-NSSpeechRecognizer#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2017 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

data-files:
  data/YourVoiceCommands.hs

source-repository head
  type:     git
  location: https://github.com/sboosali/example-Haskell-NSSpeechRecognizer

library
 if !os(osx)
     buildable: False

 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities

 exposed-modules:
                 NSSpeechRecognizer.Example

 build-depends:
               base >=4.7 && <5
             , containers
             , NSSpeechRecognizer
--              , stm

executable example-Haskell-NSSpeechRecognizer
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , example-Haskell-NSSpeechRecognizer

